--- a/bwmcnew/Site.Master
+++ b/bwmcnew/Site.Master
@@ -11,8 +11,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="icon" type="image/x-icon" size="16x16" href="favicon.png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+   
     <link rel="stylesheet" href="assets/css/slick-theme.css">
+     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/intlTelInput.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,31 +81,43 @@
 
                         <img class="img-fluid payment-cards-img" src="assets/images/payment-cards.jpg" alt="">
                     </div>
-                    <div class="col-md-3">
-                        <h6>Explore</h6>
-                        <ul class="foo-menu">
-                            <li><a href="/about">About</a></li>                            
-                            <li><a href="/contact-us">Contact</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">Sitemap</a></li>                            
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <h6>Quick Links</h6>
                         <ul class="foo-menu">
-                            <li><a href="/trademark-registration">Trademark Registration</a></li>
-                            <li><a href="/trademark-search">Search Report Service</a></li>
-                            <li><a href="/copyright-registration">Copyright Registration</a></li>
-                            <li><a href="/amazone-brand-registry">Amazon Brand Registry</a></li>
-                            <li><a href="/company-formation">Company Formation</a></li>
+                            <li><a href="/about">Blog Details</a></li>                            
+                            <li><a href="/contact-us">Case Details</a></li>
+                            <li><a href="#">Pricing Plans</a></li>
+                            <li><a href="#">Team Details </a></li>                      
                         </ul>
                     </div>
-                    <div class="col-md-3">
-                        <h6>Learn More</h6>
-                        <ul class="foo-menu">
-                            <li><a href="#">Legal and Help</a></li>
-                            <li><a href="#">Legal Form</a></li>
+                    <div class="col-md-2">
+                        <ul class="foo-menu mt-0 mt-md-5">
+                            <li><a href="#">Service Details</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
+                    </div>
+                    <div class="col-md-5">
+                        <h6 class="mb-2">Newsletter Subscription</h6>
+                        <p>Lorem Ipsum is simply dummy text of typesetting industry.</p>
+                        
+                        <form>
+                            <div class="form-holder">
+                                <input type="email" class="form-control" id="subs-email" placeholder="Enetr Your Email">
+                                <button type="submit" class="btn subs-btn">Send</button>
+                            </div>
+                        </form>
+
+                        <div class="follow-us">
+                            <h6 class="mb-2">Follow Us</h6>
+                            <ul class="follow-us-list">
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -115,11 +128,10 @@
         </footer>
     </div>
 
-    <script src="assets/js/vendors-min.js"></script>
-    <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js">	</script>
+    <script src="assets/js/vendors-min.js"></script>         
     <script src="assets/js/form-functions.js"></script>
     <script src="assets/js/intlTelInput-17.0.8.js"></script>
-    <script src="assets/js/custom.js"></script>   
-
+    <script src="assets/js/counter.min.js"></script>   
+    <script src="assets/js/custom.js"></script>
 </body>
 </html>
