--- a/bwmcnew/Site.Master
+++ b/bwmcnew/Site.Master
@@ -73,6 +73,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <a href="/"><img class="foo-logo" src="assets/images/footer-logo.png" alt=""></a>
+                        <p class="mt-2 mb-2">A business financial management company that helps you to manage your assets in time and avoid the risks of bankruptcy.</p>
                         <ul class="contact-info-foo">
                             <li><i class="fa-solid fa-phone"></i><%=ConfigurationManager.AppSettings["brandTFN"] %></li>
                             <li><i class="fa-solid fa-envelope"></i><%=ConfigurationManager.AppSettings["brandEmail"] %></li>
@@ -94,13 +95,13 @@
                         <ul class="foo-menu mt-0 mt-md-5">
                             <li><a href="#">Service Details</a></li>
                             <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
+<%--                            <li><a href="#">Contact Us</a></li>--%>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5">
                         <h6 class="mb-2">Newsletter Subscription</h6>
-                        <p>Lorem Ipsum is simply dummy text of typesetting industry.</p>
+                        <p>Get valuable insights about how you can save your company.</p>
                         
                         <form>
                             <div class="form-holder">
