--- a/bwmcnew/Site.Master
+++ b/bwmcnew/Site.Master
@@ -10,8 +10,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="icon" type="image/x-icon" size="16x16" href="favicon.png">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-   
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">   
     <link rel="stylesheet" href="assets/css/slick-theme.css">
      <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/slick.css">
@@ -72,7 +71,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
-                        <a href="/"><img class="foo-logo" src="assets/images/footer-logo.png" alt=""></a>
+                        <a href="/"><img class="img-fluid foo-logo" src="/assets/images/footer-logo.png" alt=""></a>
                         <ul class="contact-info-foo">
                             <li><i class="fa-solid fa-phone"></i><%=ConfigurationManager.AppSettings["brandTFN"] %></li>
                             <li><i class="fa-solid fa-envelope"></i><%=ConfigurationManager.AppSettings["brandEmail"] %></li>
@@ -94,13 +93,13 @@
                         <ul class="foo-menu mt-0 mt-md-5">
                             <li><a href="#">Service Details</a></li>
                             <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
+<%--                            <li><a href="#">Contact Us</a></li>--%>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5">
                         <h6 class="mb-2">Newsletter Subscription</h6>
-                        <p>Lorem Ipsum is simply dummy text of typesetting industry.</p>
+                        <p>Get valuable insights about how you can save your company.</p>
                         
                         <form>
                             <div class="form-holder">
@@ -123,7 +122,7 @@
             </div>
 
             <div class="copyright">
-                <p>©2023 Brand-name.com, Inc. All rights reserved.</p>
+                <p>©2023 <%=ConfigurationManager.AppSettings["brandDomain"] %>, Inc. All rights reserved.</p>
             </div>
         </footer>
     </div>
